[package]
name = "bytebeam-esp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-svc = {version="0.24.0", features=["experimental"]}
esp-idf-svc = {version="0.45.0", features=["experimental"]}
esp-idf-sys = "0.32.1"
# serde-json-core = "0.5.0"
static_cell = "1.0.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
esp-idf-hal = "0.40.1"
anyhow = "1.0.68"
log = "0.4.17"

[build-dependencies]
embuild = "0.31"

[dev-dependencies]
esp-idf-hal = "0.40.1"
esp-idf-sys = { version="0.32.1", features=["binstart"]}
toml-cfg = "0.1.3"

[profile.release]
strip = true
opt-level = "z"
