[package]
name = "bytebeam-esp-rs"
version = "0.1.0"
edition = "2021"
description = "SDK for connecting ESP boards with Bytebeam Cloud platform"
authors = ["swanandx <swanand@bytebeam.io>"]
repository = "https://github.com/bytebeamio/bytebeam-esp-rs-sdk/"
keywords = ["embedded", "sdk", "esp-idf", "esp32", "bytebeam"]
categories = ["embedded"]
license = "MIT"

[dependencies]
embedded-svc = "0.24.0"
esp-idf-svc = "0.45.0"
esp-idf-sys = "0.32.1"
# serde-json-core = "0.5.0"
static_cell = "1.0.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
esp-idf-hal = "0.40.1"
anyhow = "1.0.68"
log = "0.4.17"

[build-dependencies]
embuild = "0.31"

[dev-dependencies]
esp-idf-hal = "0.40.1"
esp-idf-sys = { version="0.32.1", features=["binstart"]}
toml-cfg = "0.1.3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
